--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -30,8 +30,8 @@
                             </div>   
                             <div class="col-md-3 col-sm-12">
                                 <label class="label-form">DNI<span class="campo-obligatorio">*</span></label>
-                                <input type="number" class="form-control mb-3" name="dni" id="dni" required value="{{ form_data.dni if form_data else '' }}">
-                                <div id="nombre-error" class="error-message"></div> 
+                                <input type="number" class="form-control mb-3" name="dni" id="dni" required value="{{ form_data.dni if form_data else '' }}" oninput="validarDNI()">
+                                <div id="dni-error" class="error-message" style="display: none;"></div>
                             </div>                         
                             <div class="col-md-3 col-sm-12">
                                 <label class="label-form">Email <span class="campo-obligatorio">*</span></label>
