--- a/src/templates/egresos.html
+++ b/src/templates/egresos.html
@@ -122,7 +122,7 @@
             </div>
                 <div class="row mb-3">
                     <div class="form-inline">
-                        <input type="text" class="form-control" id="busquedaInput" placeholder="Buscar alumno">
+                        <input type="text" class="form-control" id="busquedaInput" placeholder="Buscar egreso">
                     </div>
                 </div>
                 <div class="table-responsive">
