--- a/src/templates/ingresos.html
+++ b/src/templates/ingresos.html
@@ -141,7 +141,7 @@
                 
                 <div class="row mb-3">
                     <div class="form-inline">
-                        <input type="text" class="form-control" id="busquedaInput" placeholder="Buscar alumno">
+                        <input type="text" class="form-control" id="busquedaInput" placeholder="Buscar ingreso">
                     </div>
                 </div>
                 <div class="table-responsive">
