--- a/src/templates/listado.html
+++ b/src/templates/listado.html
@@ -91,7 +91,7 @@
                                                         </div>      
                                                         <div class="col">
                                                             <label class="label-form">DNI <span class="campo-obligatorio">*</span></label>
-                                                            <input type="number" id="dni"  class="form-control mb-3" name="dni" required value="{{ d.dni }}">
+                                                            <input type="number" id="dni"  class="form-control mb-3" name="dni" required value="{{ d.dni }}" maxlength="8" pattern="[0-9]{1,8}">
                                                         </div>      
                                                                   
                                                         <div class="col">
