--- a/src/templates/listado.html
+++ b/src/templates/listado.html
@@ -373,8 +373,8 @@
             text: "¿Estás seguro de eliminar al alumno " + apellido + " " + nombre + "?",
             icon: "warning",
             showCancelButton: true,
-            confirmButtonColor: "#3085d6",
-            cancelButtonColor: "#d33",
+            confirmButtonColor: "#FBD374",
+            cancelButtonColor: "#FBD374",
             confirmButtonText: "Sí, eliminar",
             cancelButtonText: "Cancelar"
         }).then((result) => {
