--- a/src/static/css/style.css
+++ b/src/static/css/style.css
@@ -477,3 +477,7 @@ a{
 #paginacion {
   text-align: right; /* Alinea el contenido a la derecha */
 }
+
+.swal2-styled.swal2-confirm{
+  background-color: #7ea56a !important;
+}
