--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -117,7 +117,8 @@
                             </div>
                             
                             
-                            <div class="col-md-3 col-sm-12">
+                         
+                        <div class="col-md-3 col-sm-12">
                                 <label class="label-form">Horario <span class="campo-obligatorio">*</span></label>
                                 <input class="form-control mb-3" type="time" id="horario" name="horario" required value="{{ form_data.horario if form_data else '' }}">
                             </div>
@@ -161,7 +162,7 @@
                                         return true;
                                     }
                                     </script>
-                            </div>
+                            </div>-->
 
 
                             <div class="text-center">
