--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -162,7 +162,7 @@
                                         return true;
                                     }
                                     </script>
-                            </div>-->
+                            </div>
 
 
                             <div class="text-center">
